pagination fix wip
